--- a/info.yaml
+++ b/info.yaml
@@ -3,5 +3,5 @@ version: "0.2.0"
 package_name: "anime_downloader"
 developer: "projectdx"
 description: "anime downloader"
-home: "https://github.com/flaskfarm/ffmpeg"
-more: "https://raw.githubusercontent.com/flaskfarm/ffmpeg/main/README.md"
+home: "http://yommi.duckdns.org:20080/ff_plugins/anime_downloader"
+more: "http://yommi.duckdns.org:20080/ff_plugins/anime_downloader/README.md"
